add Timeline/ Post/ Resume features

--- a/Toonkung/Info.plist
+++ b/Toonkung/Info.plist
@@ -53,6 +53,10 @@
 		<string>UIInterfaceOrientationLandscapeLeft</string>
 		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
+	<key>NSPhotoLibraryUsageDescription</key>
+	<string>Photo needed!!!!</string>
+	<key>NSCameraUsageDescription</key>
+	<string>Camera needed!!!</string>
 	<key>UISupportedInterfaceOrientations~ipad</key>
 	<array>
 		<string>UIInterfaceOrientationPortrait</string>
